# mindmappr-setup

./: .gitignore  ADVANCED_PREDATOR_DEFENSE.md  BAD_ACTOR_DETECTION.md  BOT_BOUNDARY_FRAMEWORK.md  BOUNDARY_EDUCATION_FRAMEWORK.md  EMAIL_ORGANIZER_SECURITY_ENHANCEMENT.md  GITHUB_CONFIG.md  GITHUB_STRATEGY.md  IDENTITY.md  LICENSE  MASTER_DOCUMENT.md  MEETAUDREYEVANS_REPO_ASSESSMENT.md  MEMORY.md  OPENROUTER_TEAM_STRATEGY.md  PREDATORY_BEHAVIOR_RESEARCH.md  README.md  REVVEL_EMAIL_COMPASS_ANALYSIS.md  REVVEL_EMAIL_ORGANIZER_ANALYSIS.md  REVVEL_EMAIL_ORGANIZER_INTEGRATION_STRATEGY.md  SKILLS.md  SOUL.md  TODO.md  UNIVERSAL_TASK_MANAGEMENT_FRAMEWORK.md  advanced_predator_defense.py  agent_security_research.py  ai_system_support.py  app_review_script.py  bot_boundary_config.json  bot_boundary_defense.py  boundary_education_guide.py  create_project_structure.py  email_cleanup_system.py  email_compass_production_deploy.py  email_organizer_analysis_config.json  email_organizer_security_engine.py  github_access_setup.sh  github_actions_workflow.yml  github_clone_script.sh  github_pages_workflow.yml  github_setup.sh  (+18 more)
.openclaw/: workspace-state.json
configs/: openclaw.env
job-queue/: mindmappr-queue.sh
memory/: heartbeat-state.json  moltbook_posting.json
revvel-email-organizer/: main.py  requirements.txt
revvel_email_organizer/: cli.py
ssh/: README.md
workspace/: AGENT_SECURITY_SKILL.md  (+46 more)
workspace/revvel_email_organizer/: README.md  SPECS.md  pyproject.toml  requirements.txt  setup.py
workspace/revvel_email_organizer/revvel_email_organizer/: email_processor.py
(+21 files in other folders)
